syntax = "proto3";

option go_package = "Personal/micro-skeleton/internal/grpc";

package microskeleton;

service MicroSkeleton {
    rpc CreateItem(Item) returns (Item) {};
    rpc GetItem(ItemID) returns (Item) {};
}

message Item {
    optional string ID = 1;
    string Name = 2;
    float Price = 3;
    optional int32 Count = 4;
    optional string ImageURL = 5;
}

message ItemID {
    string ID = 1;
}